// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Components.BannerComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1637b1s"
    >
      <div
        className="css-1vzsge8"
      >
        We believe in everyone's power to do good
      </div>
      <div>
         
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Add Ecosia to Firefox
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Components.HireComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1hsx150"
    >
      <div
        className="css-1vzsge8"
      >
        We're hiring!
      </div>
      <div
        className="css-18ogej"
      >
        Want to help change the world? Let's team up. 
        <br />
        Apply to help us build great products and services that can make the world a more sustainable place. 
        <br />
        We can't wait to hear from you.
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          See openings
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Components.MeetTheTeamComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-14wcu1j"
    >
      <div
        className="css-1vzsge8"
      >
        Step inside!
      </div>
      <div
        className="css-18ogej"
      >
        Meet the humans who make Ecosia and learn what it's like to work here.
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-ke5b6m-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Play
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Components.SocialBusinessComponent/> renders correctly 1`] = `
<div
  className="css-flwcnq"
>
  <div
    className="css-1vzsge8"
  >
    Ecosia is a social business founded in 2009 after a trip around the world
  </div>
  <div
    className="css-ef7oun"
  >
    <div>
      <div
        className="css-1wjqaby"
      >
        December 2009
      </div>
      <div
        className="css-1yltisf"
      >
        Ecosia is born
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        Christian founded Ecosia.org after a trip around the world helped him understand the problems of deforestation.
      </div>
    </div>
    <div>
      <div
        className="css-1wjqaby"
      >
        2009 - 2011
      </div>
      <div
        className="css-1yltisf"
      >
        People's choice
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        Ecosia won several awards for its clever concept and speedy growth in Europe and beyond.
      </div>
    </div>
    <div>
      <div
        className="css-1wjqaby"
      >
        April 2014
      </div>
      <div
        className="css-1yltisf"
      >
        First German B Corp
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        Ecosia was the first German company to become a B Corporation thanks to its social business model.
      </div>
    </div>
    <div>
      <div
        className="css-1wjqaby"
      >
        April 2018
      </div>
      <div
        className="css-1yltisf"
      >
        25 million trees
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        A planting milestone! That same year, Ecosia also builds its own solar energy plant to power every search.
      </div>
    </div>
  </div>
  <div>
     
  </div>
</div>
`;
